# .emacs.d

./: .dir-locals.el  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  README.org  autocompletion.el  bookmarks  custom.el  environment-win64.yml  font.el  graveyard.org  init.el  keybindings.el  keymaps.el  linux.el  lsp.el  macos.el  minimap.el  misc.el  nondefaults.el  org-roam.db  org.el  projects.el  pyguy.org  pyrightconfig.json  python.el  requirements.txt  sql.el  theme.el  todo.org  tramp.el  treesitter.el
config/: autocompletion.el  keybindings.el  linux.el  lsp.el  macos.el  meow.el  minimap.el  misc.el  org.el  projects.el  python.el  sql.el  theme.el  tramp.el  treesitter.el  windows.el
elpa/: compat-28.1.2.2.signed  corfu-0.28.signed  corfu-terminal-0.4.signed  corfu-terminal-0.5.signed  coterm-1.6.signed  csv-mode-1.21.signed  eat-0.9.4.signed  ef-themes-0.9.0.signed  ef-themes-1.4.0.signed  minimap-1.4.signed  popon-0.10.signed  popon-0.11.signed  sql-indent-1.6.signed  tomelr-0.4.3.signed  tramp-2.6.0.signed  vertico-0.28.signed  vertico-1.0.signed
elpa/ahk-mode-20200412.1832/: ahk-mode-autoloads.el  ahk-mode-pkg.el  ahk-mode.el
elpa/anaconda-mode-20220922.741/: anaconda-mode-autoloads.el  anaconda-mode-pkg.el  (+1 more)
eshell/: alias  enable_proxy.esh  login
org/: cheatsheet.org  literate-python.org  org-modern-init.el  todo.org
python/: flushing.py  myguy.py  pyproject.toml  pyrightconfig.json  suggestions.org
site-lisp/: bq.el  hive2.el  pyrightconfig.el  scf-mode.el  sqlformat.el  tramp-venv.el
tutorials/: org-babel-bigquery.org
(+435 files in other folders)
