[tool.poetry]
name = "tmp"
version = "0.1.0"
description = ""
authors = ["Robb Enzmann <robbenzmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
python-lsp-server = "^1.5.0"
pylsp-mypy = "^0.6.3"
python-lsp-black = "^1.2.1"
pyls-memestra = "^0.0.16"
pylsp-rope = "^0.1.10"
setuptools = "^65.5.0"
numpy = "^1.23.4"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
