[tool.poetry]
name = "lsp-demo"
version = "0.1.0"
description = "Trying things out"
authors = ["Robb Enzmann <robbenzmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
seaborn = "^0.12.1"
scipy = "^1.9.3"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
